--- a/CNNs/AlexNet/AlexNet.ipynb
+++ b/CNNs/AlexNet/AlexNet.ipynb
@@ -16,6 +16,47 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "zsdoxTY_QzFE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 306
+        },
+        "outputId": "16a08553-5565-42b4-e52a-616b2d04d90f"
+      },
+      "source": [
+        "!nvidia-smi"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mon Jun  8 14:09:16 2020       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 440.82       Driver Version: 418.67       CUDA Version: 10.1     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   46C    P8    30W / 149W |      0MiB / 11441MiB |      0%      Default |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                       GPU Memory |\n",
+            "|  GPU       PID   Type   Process name                             Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "oIhFcIL-XOMx",
         "colab_type": "code",
         "colab": {}
@@ -26,10 +67,36 @@
         "import torch.nn.functional as F\n",
         "import torch.optim as optim\n",
         "import torchvision\n",
-        "import torchvision.transforms as transforms"
+        "import torchvision.transforms as transforms\n",
+        "\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Iq_1qJRQ-Li",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ec17aaff-54a6-4ee2-fda8-da1e491b1e1d"
+      },
+      "source": [
+        "print(device)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "cuda\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -46,11 +113,11 @@
       "metadata": {
         "id": "LwmTPzSXXONF",
         "colab_type": "code",
+        "outputId": "6d42b4bd-dc50-4b3f-aea1-609b5771aeda",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6d42b4bd-dc50-4b3f-aea1-609b5771aeda"
+        }
       },
       "source": [
         "transform = transforms.Compose([transforms.Resize((224,224)), # Resize tensor từ 32x32 thành 224x224 để phù hợp với đầu vào của AlexNet\n",
@@ -70,7 +137,7 @@
         "classes = ('plane', 'car', 'bird', 'cat',\n",
         "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,18 +163,18 @@
       "metadata": {
         "id": "8o5NzAAeXONR",
         "colab_type": "code",
+        "outputId": "3c9019c6-70f2-4eae-8773-226b37af2a64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3c9019c6-70f2-4eae-8773-226b37af2a64"
+        }
       },
       "source": [
         "train_iter = iter(train_loader)\n",
         "x, y = train_iter.next()\n",
         "print(x.size())"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,18 +312,18 @@
       "metadata": {
         "id": "MXzjzoM5XOOK",
         "colab_type": "code",
+        "outputId": "fc2610f0-8af4-4869-f88f-25f9e1a12a1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
-        },
-        "outputId": "fc2610f0-8af4-4869-f88f-25f9e1a12a1e"
+        }
       },
       "source": [
         "# Thử in ra kích thước các tham số của mạng\n",
         "for i, p in enumerate(net.parameters()):\n",
         "    print(i, p.size())"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,11 +388,11 @@
       "metadata": {
         "id": "lIigXX_3XOOb",
         "colab_type": "code",
+        "outputId": "3c4a2f78-4029-4e6f-af3c-aa75cd27ce6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "3c4a2f78-4029-4e6f-af3c-aa75cd27ce6b"
+        }
       },
       "source": [
         "n_epochs = 10\n",
