--- a/CNNs/AlexNet/AlexNet.ipynb
+++ b/CNNs/AlexNet/AlexNet.ipynb
@@ -18,16 +18,16 @@
       "metadata": {
         "id": "zsdoxTY_QzFE",
         "colab_type": "code",
+        "outputId": "16a08553-5565-42b4-e52a-616b2d04d90f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
-        },
-        "outputId": "16a08553-5565-42b4-e52a-616b2d04d90f"
+        }
       },
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,7 +59,10 @@
       "metadata": {
         "id": "oIhFcIL-XOMx",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c080fc7-8067-41d8-a425-643709a15328"
       },
       "source": [
         "import torch\n",
@@ -69,25 +72,34 @@
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
         "\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "print(device)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "cuda\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "3Iq_1qJRQ-Li",
         "colab_type": "code",
+        "outputId": "ec17aaff-54a6-4ee2-fda8-da1e491b1e1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ec17aaff-54a6-4ee2-fda8-da1e491b1e1d"
+        }
       },
       "source": [
-        "print(device)"
+        ""
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +314,8 @@
         "colab": {}
       },
       "source": [
-        "net = AlexNet()"
+        "net = AlexNet()\n",
+        "net.to(device)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -402,6 +415,7 @@
         "    running_loss = 0.0\n",
         "    for i, data in enumerate(train_loader): # Với mỗi batch:\n",
         "        X, y = data # data là 1 tuple (X, y), dòng này unpack tuple đó để gán vào X, y.\n",
+        "        X, y = X.to(device), y.to(device)\n",
         "        optimizer.zero_grad() # Reset các gradient trọng số sau mỗi lần cập nhật trọng số ở mỗi batch, nếu không chúng sẽ tích luỹ, gây ảnh hưởng đến các batch sau.\n",
         "        \n",
         "        predictions = net(X) # Thực hiện lượt truyền xuôi (forward pass) cho batch hiện tại -> có kết quả nhãn dự đoán \n",
