remove logging on GPU

--- a/CNNs/AlexNet/AlexNet.ipynb
+++ b/CNNs/AlexNet/AlexNet.ipynb
@@ -10,7 +10,256 @@
       "name": "AlexNet.ipynb",
       "provenance": []
     },
-    "accelerator": "GPU"
+    "accelerator": "GPU",
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "eaf43f0a044b4f23b2659ab06f26eb76": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "state": {
+            "_view_name": "HBoxView",
+            "_dom_classes": [],
+            "_model_name": "HBoxModel",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "box_style": "",
+            "layout": "IPY_MODEL_19d2b95bece2494b9b7fa14aca8575b9",
+            "_model_module": "@jupyter-widgets/controls",
+            "children": [
+              "IPY_MODEL_c1a62492175b4d0bb993ab69e312745a",
+              "IPY_MODEL_a190e861c5a64e378ac2391c80983f9d"
+            ]
+          }
+        },
+        "19d2b95bece2494b9b7fa14aca8575b9": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "c1a62492175b4d0bb993ab69e312745a": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "FloatProgressModel",
+          "state": {
+            "_view_name": "ProgressView",
+            "style": "IPY_MODEL_29cdd88505c74b2a9406a651f6c327a1",
+            "_dom_classes": [],
+            "description": "",
+            "_model_name": "FloatProgressModel",
+            "bar_style": "info",
+            "max": 1,
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": 1,
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "orientation": "horizontal",
+            "min": 0,
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_f05cb9d433d94299b698267bd7f1728a"
+          }
+        },
+        "a190e861c5a64e378ac2391c80983f9d": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HTMLModel",
+          "state": {
+            "_view_name": "HTMLView",
+            "style": "IPY_MODEL_969dfb9d3f014705986ad354a5f5b017",
+            "_dom_classes": [],
+            "description": "",
+            "_model_name": "HTMLModel",
+            "placeholder": "​",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": " 170500096/? [00:20&lt;00:00, 31948551.61it/s]",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_50f2aed241b845af8b9caee4d6954232"
+          }
+        },
+        "29cdd88505c74b2a9406a651f6c327a1": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ProgressStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "ProgressStyleModel",
+            "description_width": "initial",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "bar_color": null,
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "f05cb9d433d94299b698267bd7f1728a": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "969dfb9d3f014705986ad354a5f5b017": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "DescriptionStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "50f2aed241b845af8b9caee4d6954232": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        }
+      }
+    }
   },
   "cells": [
     {
@@ -59,10 +308,11 @@
       "metadata": {
         "id": "oIhFcIL-XOMx",
         "colab_type": "code",
+        "outputId": "d5d0039b-2dc3-489e-b358-5913bcfd0e6c",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6c080fc7-8067-41d8-a425-643709a15328"
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "import torch\n",
@@ -75,31 +325,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(device)"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "cuda\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3Iq_1qJRQ-Li",
-        "colab_type": "code",
-        "outputId": "ec17aaff-54a6-4ee2-fda8-da1e491b1e1d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,10 +351,20 @@
       "metadata": {
         "id": "LwmTPzSXXONF",
         "colab_type": "code",
-        "outputId": "6d42b4bd-dc50-4b3f-aea1-609b5771aeda",
+        "outputId": "1ba1e557-cfca-4249-9f0e-0e6c996fbcd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 83,
+          "referenced_widgets": [
+            "eaf43f0a044b4f23b2659ab06f26eb76",
+            "19d2b95bece2494b9b7fa14aca8575b9",
+            "c1a62492175b4d0bb993ab69e312745a",
+            "a190e861c5a64e378ac2391c80983f9d",
+            "29cdd88505c74b2a9406a651f6c327a1",
+            "f05cb9d433d94299b698267bd7f1728a",
+            "969dfb9d3f014705986ad354a5f5b017",
+            "50f2aed241b845af8b9caee4d6954232"
+          ]
         }
       },
       "source": [
@@ -149,12 +385,35 @@
         "classes = ('plane', 'car', 'bird', 'cat',\n",
         "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Files already downloaded and verified\n"
+            "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ../data/cifar-10-python.tar.gz\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "eaf43f0a044b4f23b2659ab06f26eb76",
+              "version_minor": 0,
+              "version_major": 2
+            },
+            "text/plain": [
+              "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Extracting ../data/cifar-10-python.tar.gz to ../data/\n"
           ],
           "name": "stdout"
         }
@@ -311,14 +570,40 @@
       "metadata": {
         "id": "Fb2l6xEqXOOD",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "0d9f2191-47c0-45d4-9a6f-7948a2f0db03"
       },
       "source": [
         "net = AlexNet()\n",
         "net.to(device)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "AlexNet(\n",
+              "  (conv1): Conv2d(3, 96, kernel_size=(11, 11), stride=(4, 4))\n",
+              "  (conv2): Conv2d(96, 256, kernel_size=(5, 5), stride=(2, 2))\n",
+              "  (conv3): Conv2d(256, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (conv4): Conv2d(384, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (conv5): Conv2d(384, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (fc1): Linear(in_features=1536, out_features=4096, bias=True)\n",
+              "  (fc2): Linear(in_features=4096, out_features=4096, bias=True)\n",
+              "  (fc3): Linear(in_features=4096, out_features=10, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -401,18 +686,16 @@
       "metadata": {
         "id": "lIigXX_3XOOb",
         "colab_type": "code",
-        "outputId": "3c4a2f78-4029-4e6f-af3c-aa75cd27ce6b",
+        "outputId": "a6a34bbb-c1e6-4644-9078-4867da343733",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 71
         }
       },
       "source": [
         "n_epochs = 10\n",
-        "losses = [] # Lưu các loss sau mỗi 100 batch để vẽ learning curve\n",
         "\n",
         "for epoch in range(n_epochs):\n",
-        "    running_loss = 0.0\n",
         "    for i, data in enumerate(train_loader): # Với mỗi batch:\n",
         "        X, y = data # data là 1 tuple (X, y), dòng này unpack tuple đó để gán vào X, y.\n",
         "        X, y = X.to(device), y.to(device)\n",
@@ -423,16 +706,11 @@
         "        loss.backward() # Thực hiện lan truyền ngược (backward pass)\n",
         "        \n",
         "        optimizer.step() # Cập nhật các tham số của mô hình\n",
-        "        \n",
-        "        running_loss += loss.item()\n",
-        "        if epoch%100 == 99:\n",
-        "            avg_loss = running_loss/100.0\n",
-        "            losses.append(avg_loss)\n",
-        "            running_loss = 0.0\n",
-        "            print(\"Epoch {}, minibatch {}: loss = {}\".format(epoch+1, i+1, avg_loss))\n",
+        "\n",
+        "print(\"Done!\")\n",
         "        "
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,6 +718,13 @@
             "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:46: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Done!\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
