--- a/CNNs/AlexNet/AlexNet.ipynb
+++ b/CNNs/AlexNet/AlexNet.ipynb
@@ -40,7 +40,7 @@
       "source": [
         "!pip install git+https://github.com/cuongvng/neural-networks-with-PyTorch.git"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +73,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(device)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
         "classes = ('plane', 'car', 'bird', 'cat',\n",
         "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +208,7 @@
         "id": "NqkVZzcqXONQ"
       },
       "source": [
-        "Hãy xem thử dữ liệu có dạng như thế nào?"
+        "Let see how the data looks like:\n"
       ]
     },
     {
@@ -228,7 +228,7 @@
         "print(x.size())\n",
         "print(y)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,8 +263,9 @@
       },
       "source": [
         "<figure>\n",
-        "    <img src=\"https://github.com/cuongvng/neural-networks-with-PyTorch/blob/master/CNNs/AlexNet/img/AlexNetArchitecture.png?raw=1\" width=\"25%\" class=\"center\"/>\n",
-        "    <figcaption>Cấu trúc mạng AlexNet</figcaption>\n",
+        "    <center><img src=\"https://github.com/cuongvng/neural-networks-with-PyTorch/blob/master/CNNs/AlexNet/img/AlexNetArchitecture.png?raw=1\" width=25%/></center>\n",
+        "    <center><figcaption>AlexNet architecture <br>\n",
+        "    Source: https://github.com/d2l-ai/d2l-en/blob/master/img/alexnet.svg </figcaption></center>\n",
         "</figure>"
       ]
     },
@@ -309,7 +310,7 @@
         "        X = self.fc3(X)\n",
         "        return X\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +323,7 @@
       "source": [
         "net = AlexNet()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +342,7 @@
         "for i, p in enumerate(net.parameters()):\n",
         "    print(i, p.size())"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +389,7 @@
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(net.parameters(),lr=0.0001)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -416,7 +417,7 @@
         "n_epochs = 10\n",
         "train_cnn(net, device, train_loader, test_loader, optimizer, criterion, n_epochs)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
