--- a/CNNs/AlexNet/AlexNet.ipynb
+++ b/CNNs/AlexNet/AlexNet.ipynb
@@ -27,6 +27,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9-xhWs28sn0X",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/cuongvng/neural-networks-with-PyTorch/blob/master/CNNs/AlexNet/AlexNet.ipynb\" target=\"_parent\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "K2Xl8p05RKxU",
