--- a/CNNs/GoogleNet/GoogleNet.ipynb
+++ b/CNNs/GoogleNet/GoogleNet.ipynb
@@ -263,6 +263,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yGcboEhfqWou",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/cuongvng/neural-networks-with-PyTorch/blob/master/CNNs/GoogleNet/GoogleNet.ipynb\" target=\"_parent\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xwpScwswhahe",
@@ -276,7 +288,7 @@
       "source": [
         "!pip install git+https://github.com/cuongvng/neural-networks-with-PyTorch.git"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +322,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +376,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(device)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,7 +449,7 @@
         "classes = ('plane', 'car', 'bird', 'cat',\n",
         "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,7 +551,7 @@
         "        # Concatenate results of the 4 paths over the channel dimension\n",
         "        return torch.cat((X1, X2, X3, X4), dim=1)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +672,7 @@
         "        \n",
         "        return X"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -673,7 +685,7 @@
       "source": [
         "net = GoogleNet()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -687,7 +699,7 @@
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(net.parameters(),lr=0.001)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -705,7 +717,7 @@
         "n_epochs = 10\n",
         "train_cnn(net, device, train_loader, test_loader, optimizer, criterion, n_epochs)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
